products/devex/products/devex/cd/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: devex
  namespace: default
  labels:
    "app.kubernetes.io/name": "devex"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    "app.kubernetes.io/name": "devex"
