products/devex/products/devex/cd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devex
  namespace: default
  labels:
    "app.kubernetes.io/name": "devex"
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: test-devex.eks01uws2.stg.z7a.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devex
                port:
                  number: 80
    - host: test-devex.zilliqa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devex
                port:
                  number: 80
